[gd_scene load_steps=6 format=3 uid="uid://d00qrskt3ya5r"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_c3eem"]
[ext_resource type="TileSet" uid="uid://dcwh58rs1h1k4" path="res://Assets/Boards/boards_tile_set.tres" id="1_qgybf"]

[sub_resource type="Animation" id="Animation_cyfo2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(128, 64)]
}

[sub_resource type="Animation" id="Animation_6d4e7"]
resource_name = "play_popup"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(2.2974, 2.14355),
"update": 0,
"values": [Vector2(16, 64), Vector2(128, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7mpp"]
_data = {
"RESET": SubResource("Animation_cyfo2"),
"play_popup": SubResource("Animation_6d4e7")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3eem")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
gui_disable_input = true
size = Vector2i(640, 360)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="TileMap" type="TileMap" parent="SubViewportContainer/SubViewport"]
y_sort_enabled = true
position = Vector2(65, 34)
scale = Vector2(2, 2)
tile_set = ExtResource("1_qgybf")
format = 2
layer_0/name = "terra"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(196609, 262144, 0, -1, 0, 0, 65535, 0, 2, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 1, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 1, -65536, 0, 0, 0, 0, 1, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 4, 393216, 0, 1, 458752, 0, 268435460, 524288, 0, 0, 589824, 1, 0, -65535, 0, 0, 1, 0, 2, 65537, 0, 0, 131073, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 4, 458753, 1, 0, 524289, 1, 0, 589825, 0, 1, -65534, 1, 7, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 1, 0, 393218, 1, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, -65533, 0, 0, 3, 1, 1, 65539, 1, 1, 196611, 1, 0, 262147, 1, 0, 327683, 0, 0, 393219, 0, 1, 458755, 0, 0, 524291, 0, 0, 589827, 0, 1, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 2, 524292, 0, 0, 589828, 0, 0, 655361, 196608, 0, 655360, 1, 8, -131069, 1, 0, 131076, 1, 6, -131068, 0, 1, 655362, 196608, 0, 655363, 196608, 0, 655364, 196608, 0, 655365, 131072, 0, 524293, 131072, 0, 393221, 131072, 0, 262149, 131072, 0, 131077, 131072, 0, 5, 131072, 0, 131070, 65536, 0, 262142, 65536, 0, 393214, 65536, 0, 524286, 65536, 0, 720895, 65536, 0, 655358, 65536, 0, -131070, 0, 4, 131075, 0, 0, 65538, 0, 1, 2, 0, 0, -65537, 0, 0, -2, 65536, 0, -131073, 0, 0, -131072, 0, 3, -262144, 0, 0, -196608, 0, 1, -131071, 0, 0, -196607, 0, 0, -262142, 0, 0, -196606, 131072, 0, -327679, 0, 0, -262143, 0, 0, -196605, 1, 9, 720896, 131072, 0, 786431, 65536, 0)
layer_1/name = "decor"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(393218, 65536, 3)

[node name="Buttons" type="PanelContainer" parent="."]
layout_mode = 0
anchor_left = 0.025
anchor_top = 0.2
anchor_right = 0.175
anchor_bottom = 0.8
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Join")
focus_next = NodePath("../Join")
focus_previous = NodePath("../Quit")
mouse_default_cursor_shape = 2
text = "Play"

[node name="Join" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
disabled = true
text = "Join"

[node name="Fullscreen" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Fullscreen"

[node name="Control" type="Control" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Join")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Join")
mouse_default_cursor_shape = 2
text = "Quit"

[node name="PlayContainer" type="PanelContainer" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.325
offset_left = -112.0
offset_right = -112.0
scale = Vector2(1e-05, 1)
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PlayContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PlayContainer/MarginContainer"]
layout_mode = 2

[node name="Singleplayer" type="Button" parent="PlayContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../../../Buttons/MarginContainer/VBoxContainer/Play")
focus_neighbor_right = NodePath("../Multiplayer")
focus_next = NodePath("../Multiplayer")
focus_previous = NodePath("../Multiplayer")
mouse_default_cursor_shape = 2
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="PlayContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Singleplayer")
focus_neighbor_right = NodePath("../Singleplayer")
focus_next = NodePath("../Singleplayer")
focus_previous = NodePath("../Singleplayer")
disabled = true
text = "Multiplayer"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_p7mpp")
}

[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PlayContainer/MarginContainer/HBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
